--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "node-sass": "^4.14.1",
-    "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.2"
+    "nuxt": "^2.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.43.0"
+  }
 }
